--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,12 @@
 {
-  "name": "angular-QueryString",
-  "version": "0.1.0",
+  "name": "angular-querystring",
+  "version": "0.1.1",
   "homepage": "https://github.com/igorizr1/angular-QueryString",
   "authors": [
-    "codestack <codestack123@gmail.com>"
+    "codestack <igorizr1@gmail.com>"
   ],
   "main": [
-    "QueryString.js"
+    "querystring.js"
   ],
   "license": "MIT",
   "ignore": [
